app-deployment-v1.yaml
apiVersion: apps/v1beta1        
kind: Deployment                  
metadata:
  name: kubia                     
spec:
  replicas: 3
  template:
    metadata:
      name: kubia
      labels:
        app: kubia
    spec:
      containers:
      - image: luksa/kubia:v1
        name: nodejs
