app-deployment-v2.yaml
apiVersion: apps/v1beta1        
kind: Deployment                  
metadata:
  name: kubia                     
spec:
  replicas: 
  template:
    metadata:
      name: kubia
      labels:
        app: kubia
    spec:
      containers:
      - image: luksa/kubia:v2
        name: nodejs
